RESOLVED FIXED134602
JSActivation::symbolTablePut() should invalidate variable watchpoints
https://bugs.webkit.org/show_bug.cgi?id=134602
Summary JSActivation::symbolTablePut() should invalidate variable watchpoints
Filip Pizlo
Reported 2014-07-03 10:46:10 PDT
Patch forthcoming.
Attachments
the patch (5.47 KB, patch)
2014-07-03 10:49 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2014-07-03 10:49:54 PDT
Created attachment 234356 [details] the patch
Oliver Hunt
Comment 2 2014-07-03 12:50:01 PDT
Comment on attachment 234356 [details] the patch ick
Filip Pizlo
Comment 3 2014-07-03 13:23:34 PDT
Note You need to log in before you can comment on or make changes to this bug.