JSActivation::symbolTablePut() should invalidate variable watchpoints https://bugs.webkit.org/show_bug.cgi?id=134602

Reviewed by Oliver Hunt.

Usually stores to captured variables cause us to invalidate the variable watchpoint because CodeBlock does so
during linking - we essentially assume that if it's at all possible for an inner function to store to a
variable we declare then this variable cannot be a constant. But this misses the dynamic store case, i.e.
JSActivation::symbolTablePut(). Part of the problem here is that JSActivation duplicates
JSSymbolTableObject's symbolTablePut() logic, which did have the invalidation. This patch keeps that code
duplicated, but fixes JSActivation::symbolTablePut() to do the right thing.

* runtime/JSActivation.cpp:
(JSC::JSActivation::symbolTablePut):
* runtime/JSSymbolTableObject.h:
(JSC::symbolTablePut):
* tests/stress/constant-closure-var-with-dynamic-invalidation.js: Added.
(.):



Canonical link: https://commits.webkit.org/152585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170766 268f45cc-cd09-0410-ab3c-d52691b4dbfc